# vault2wiki

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: PHILOSOPHY.md  PRIVACY.md
example-vault/: .env.example  config.yaml
example-vault/raw/notes/: feedback-loops.md
example-vault/raw/web/: model-managed-knowledge-workflow.md
src/vault2wiki/: cli.py  compiler.py  config.py  fts.py  gate.py  glossary.py  health.py  indexer.py  llm.py  moc.py  search.py  state.py  tags.py  util.py  verify.py
src/vault2wiki/prompts/: compile_system.md  query_system.md
